
[package]
name = "solana-bpf-bet"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"


[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "1.10.33"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "1.10.33"
solana-sdk = "~1.10.33"

[lib]
name = "programbet"
crate-type = ["cdylib", "lib"]
